<?xml version="1.0"?>
<package format="2">
  <name>cutting_app</name>
  <version>0.0.0</version>
  <description>Cutting application with trajectory generation</description>

  <maintainer email="radian.gondokaryono@mail.utoronto.ca">Radian</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <depend>dvrk_planning_msgs</depend>
  <exec_depend>dvrk_planning</exec_depend>
  <exec_depend>dvrk_planning_ros</exec_depend>

</package>
