<?xml version="1.0"?>
<package format="2">
  <name>medrct_controller</name>
  <version>0.0.1</version>
  <description>Collaborative controllers</description>
  <maintainer email="radian.gondokaryono@mail.utoronto.ca">radian</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>medrct_common</depend>
  <depend>medrct_environment</depend>
</package>
