<?xml version="1.0"?>
<package format="2">
  <name>medrct_ros</name>
  <version>0.0.0</version>
  <description>ros implementation of the communication</description>
  <maintainer email="radian.gondokaryono@mail.utorontol.ca">radian</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>medrct_common</depend>
</package>
