<?xml version="1.0"?>
<package format="2">
  <name>medrct_ros2</name>
  <version>0.0.0</version>
  <description>ros2 implementation of the communication</description>
  <maintainer email="radian.gondokaryono@mail.utorontol.ca">radian</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
