<?xml version="1.0"?>
<package format="2">
  <name>medrct_ros2_app</name>
  <version>0.0.0</version>
  <description>ros2 app implementation of teleop controllers</description>
  <maintainer email="radian.gondokaryono@mail.utorontol.ca">radian</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <depend>roscpp</depend> -->
  <depend>medrct_ros</depend>
  <depend>medrct_common</depend>
  <depend>medrct_controller</depend>
  <depend>medrct_env</depend>
</package>
